--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -2,20 +2,28 @@
 <html
   lang="en"
   class="dark:bg-gray-900 dark:text-gray-300">
-<head>
-  <meta charset="UTF-8" />
-  <link
-    rel="icon"
-    href="/favicon.ico" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
-</head>
-<body>
-<div id="app"></div>
-<script
-  type="module"
-  src="/src/main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <title>Form builder demo</title>
+    <script
+      type="module"
+      src="https://unpkg.com/vue@3.2/dist/vue.esm-browser.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/vue-router@4.1/dist/vue-router.esm-browser.js"></script>
+    <script src="https://unpkg.com/@tanstack/vue-query@4.20/build/umd/index.production.js"></script>
+  </head>
+  <body>
+    <div id="app"></div>
+
+    <script
+      type="module"
+      src="/src/main.ts"></script>
+  </body>
 </html>
